[package]
name = "ssd1680"
version = "0.5.0"
authors = [
    "Wesley Moore <wes@wezm.net>",
    "Phil Markgraf <philip.markgraf@kel.vin>",
    "Phil Markgraf <ShakenCodes@gmail.com>",
]
description = "Driver for the SSD1680 e-Paper display (EPD) controller, for use with embedded-hal"

# documentation = "https://docs.rs/ssd1680"
repository = "https://github.com/Radiator-Labs/ssd1680"

readme = "README.md"
keywords = ["embedded", "epd", "epaper", "display", "ssd1680"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.6"

[dependencies.embedded-graphics]
optional = true
version = "0.8.1"

[dependencies.linux-embedded-hal]
optional = true
version = "0.3.2"

[dependencies.profont]
optional = true
version = "0.7.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
examples = ["linux-embedded-hal", "profont"]

[[example]]
name = "raspberry_pi_inky_phat"
required-features = ["examples"]
