[package]
name = "ssd1680"
version = "0.7.0"
authors = [
    "Wesley Moore <wes@wezm.net>",
    "Phil Markgraf <philip.markgraf@kel.vin>",
    "Phil Markgraf <ShakenCodes@gmail.com>",
]
description = "Driver for the SSD1680 e-Paper display (EPD) controller, for use with embedded-hal"

# documentation = "https://docs.rs/ssd1680"
repository = "https://github.com/Radiator-Labs/ssd1680"

readme = "README.md"
keywords = ["embedded", "epd", "epaper", "display", "ssd1680"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
embedded-graphics = { version = "0.8.1", optional = true }
profont = { version = "0.7.0", optional = true }

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
